<package>

  <name>kinova_qbhand_bringup</name>
  <version>0.1.0</version>
  <description>
     The bringup(driver) package for iiwa and qbhand manipulator.
  </description>
  <author email="ferreiraduarte.nuno@gmail.com">Nuno Duarte</author>
  <maintainer email="ferreiraduarte.nuno@gmail.com">Nuno Duarte</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
